--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,9 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/account_controller.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/services/api.js"></script>
   </head>
   <body ng-app="starter">
     <!--
