--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/account_controller.js"></script>
