--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/account_controller.js"></script>
+    <script src="js/controllers/groups_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
   </head>
