the create group button links to a group creation page

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/controllers/account_controller.js"></script>
     <script src="js/controllers/groups_controller.js"></script>
+    <script src="js/controllers/groupcreate_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
   </head>
