Get popover on shifts tab working

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/group_detail_controller.js"></script>
     <script src="js/controllers/groups_controller.js"></script>
     <script src="js/controllers/group_create_controller.js"></script>
+    <script src="js/controllers/shifts_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
   </head>
