Refactor popover JS to services

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers/shifts_input_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
+    <script src="js/services/shifts_popover.js"></script>
   </head>
   <body ng-app="starter">
     <!--
