Add shifts patterns page

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/controllers/group_create_controller.js"></script>
     <script src="js/controllers/shifts_controller.js"></script>
     <script src="js/controllers/shifts_input_controller.js"></script>
+    <script src="js/controllers/shifts_patterns_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/shifts_popover.js"></script>
