Create layout for detailed shift pattern screen

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,8 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/groups/group_detail.css" rel="stylesheet">
+    <link href="css/shifts/shift_patterns.css" rel="stylesheet">
+    <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -30,6 +32,7 @@
     <script src="js/controllers/shifts_controller.js"></script>
     <script src="js/controllers/shifts_input_controller.js"></script>
     <script src="js/controllers/shifts_patterns_controller.js"></script>
+    <script src="js/controllers/shifts_patterns_detail_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/shifts_popover.js"></script>
