--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/groups/group_detail.css" rel="stylesheet">
+    <link href="css/shifts/popover.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
 
