--- a/www/index.html
+++ b/www/index.html
@@ -34,9 +34,11 @@
     <script src="js/controllers/shifts_input_controller.js"></script>
     <script src="js/controllers/shifts_patterns_controller.js"></script>
     <script src="js/controllers/shifts_patterns_detail_controller.js"></script>
+    <script src="js/controllers/shifts_patterns_new_controller.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/shifts_popover.js"></script>
+    <script src="js/services/time_adjuster.js"></script>
   </head>
   <body ng-app="starter">
     <!--
