Added Sweet Alert

--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <link href="css/shifts/popover.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
+    <link href="css/third_party/sweetalert.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -39,6 +40,7 @@
     <script src="js/services/api.js"></script>
     <script src="js/services/shifts_popover.js"></script>
     <script src="js/services/time_adjuster.js"></script>
+    <script src="js/third_party/sweetalert.min.js"></script>
   </head>
   <body ng-app="starter">
     <!--
