Added notification messages via a directive on shift patterns page

--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/directives/notification.css" rel="stylesheet">
     <link href="css/groups/group_detail.css" rel="stylesheet">
     <link href="css/shifts/popover.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns.css" rel="stylesheet">
@@ -36,6 +37,7 @@
     <script src="js/controllers/shifts_patterns_controller.js"></script>
     <script src="js/controllers/shifts_patterns_detail_controller.js"></script>
     <script src="js/controllers/shifts_patterns_new_controller.js"></script>
+    <script src="js/directives/notification.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/shifts_popover.js"></script>
