Moved message to own Notification service; cleared message from service

--- a/www/index.html
+++ b/www/index.html
@@ -40,6 +40,7 @@
     <script src="js/directives/notification.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
+    <script src="js/services/notification.js"></script>
     <script src="js/services/shifts_popover.js"></script>
     <script src="js/services/time_adjuster.js"></script>
     <script src="js/third_party/sweetalert.min.js"></script>
