--- a/www/index.html
+++ b/www/index.html
@@ -41,8 +41,8 @@
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/notification.js"></script>
+    <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
-    <script src="js/services/time_adjuster.js"></script>
     <script src="js/third_party/sweetalert.min.js"></script>
   </head>
   <body ng-app="starter">
