Refactor calendar into service file

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,8 @@
     <script src="js/directives/notification.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
+    <script src="js/services/calendar.js"></script>
+    <script src="js/services/general.js"></script>
     <script src="js/services/notification.js"></script>
     <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
