Fix problem where both calendars don't show in swap and input tabs

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/controllers/shifts_patterns_controller.js"></script>
     <script src="js/controllers/shifts_patterns_detail_controller.js"></script>
     <script src="js/controllers/shifts_patterns_new_controller.js"></script>
+    <script src="js/controllers/shifts_swap_controller.js"></script>
     <script src="js/directives/notification.js"></script>
     <script src="js/services.js"></script>
     <script src="js/services/api.js"></script>
