--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/controllers/account_controller.js"></script>
+    <script src="js/controllers/calendar_controller.js"></script>
     <script src="js/controllers/group_detail_controller.js"></script>
     <script src="js/controllers/groups_controller.js"></script>
     <script src="js/controllers/group_create_controller.js"></script>
