Can highlight date cell

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/directives/notification.css" rel="stylesheet">
     <link href="css/groups/group_detail.css" rel="stylesheet">
+    <link href="css/shifts/calendar.css" rel="stylesheet">
     <link href="css/shifts/popover.css" rel="stylesheet">
-    <link href="css/shifts/shift_input.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
     <link href="css/third_party/sweetalert.css" rel="stylesheet">
