Render shifts on calendar view

--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,7 @@
     <script src="js/controllers/shifts_swap_controller.js"></script>
     <script src="js/directives/notification.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/services/aaa_declare.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/calendar.js"></script>
     <script src="js/services/general.js"></script>
