--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
     <link href="css/groups/group_detail.css" rel="stylesheet">
     <link href="css/shifts/calendar.css" rel="stylesheet">
     <link href="css/shifts/popover.css" rel="stylesheet">
+    <link href="css/shifts/shift_input.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns.css" rel="stylesheet">
     <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
     <link href="css/third_party/sweetalert.css" rel="stylesheet">
