Switched Account tab to General tab

--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/controllers/account_controller.js"></script>
     <script src="js/controllers/calendar_controller.js"></script>
+    <script src="js/controllers/general_controller.js"></script>
     <script src="js/controllers/group_detail_controller.js"></script>
     <script src="js/controllers/groups_controller.js"></script>
     <script src="js/controllers/group_create_controller.js"></script>
