--- a/www/index.html
+++ b/www/index.html
@@ -30,19 +30,29 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
+
+
+    <!-- Calendar Controllers -->
     <script src="js/controllers/calendar_controller.js"></script>
-    <script src="js/controllers/general_controller.js"></script>
-    <script src="js/controllers/group_detail_controller.js"></script>
-    <script src="js/controllers/groups_controller.js"></script>
-    <script src="js/controllers/group_create_controller.js"></script>
     <script src="js/controllers/shifts_controller.js"></script>
     <script src="js/controllers/shifts_input_controller.js"></script>
-    <script src="js/controllers/shifts_patterns_controller.js"></script>
-    <script src="js/controllers/shifts_patterns_detail_controller.js"></script>
-    <script src="js/controllers/shifts_patterns_new_controller.js"></script>
     <script src="js/controllers/shifts_swap_controller.js"></script>
-    <script src="js/controllers/sign_up_controller.js"></script>
+
+    <!-- General Controllers -->
+    <script src="js/controllers/general/general_controller.js"></script>
+      <!-- General Groups -->
+      <script src="js/controllers/general/groups/group_detail_controller.js"></script>
+      <script src="js/controllers/general/groups/groups_controller.js"></script>
+      <script src="js/controllers/general/groups/group_create_controller.js"></script>
+      <!-- General Shift Patterns -->
+      <script src="js/controllers/general/shift_patterns/shifts_patterns_controller.js"></script>
+      <script src="js/controllers/general/shift_patterns/shifts_patterns_detail_controller.js"></script>
+      <script src="js/controllers/general/shift_patterns/shifts_patterns_new_controller.js"></script>
+      <!-- General Account -->
+      <script src="js/controllers/general/account/sign_up_controller.js"></script>
+
     <script src="js/directives/notification.js"></script>
+
     <script src="js/services.js"></script>
     <script src="js/services/aaa_declare.js"></script>
     <script src="js/services/api.js"></script>
@@ -51,6 +61,7 @@
     <script src="js/services/notification.js"></script>
     <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
+
     <script src="js/third_party/sweetalert.min.js"></script>
   </head>
   <body ng-app="starter">
