Cleaned up organization for calendar tab

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
+    <!-- CSS Files -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/directives/notification.css" rel="stylesheet">
@@ -33,8 +34,8 @@
 
 
     <!-- Calendar Controllers -->
-    <script src="js/controllers/calendar_controller.js"></script>
-    <script src="js/controllers/shifts_controller.js"></script>
+    <script src="js/controllers/calendar/calendar_controller.js"></script>
+    <script src="js/controllers/calendar/shifts_controller.js"></script>
     <script src="js/controllers/shifts_input_controller.js"></script>
     <script src="js/controllers/shifts_swap_controller.js"></script>
 
