Organized CSS files

--- a/www/index.html
+++ b/www/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <!-- CSS Files -->
+    <!-- App CSS -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/directives/notification.css" rel="stylesheet">
-    <link href="css/groups/group_detail.css" rel="stylesheet">
-    <link href="css/shifts/calendar.css" rel="stylesheet">
-    <link href="css/shifts/popover.css" rel="stylesheet">
-    <link href="css/shifts/shift_input.css" rel="stylesheet">
-    <link href="css/shifts/shift_patterns.css" rel="stylesheet">
-    <link href="css/shifts/shift_patterns_detail.css" rel="stylesheet">
+
+    <!-- Calendar CSS -->
+    <link href="css/calendar/calendar.css" rel="stylesheet">
+    <link href="css/calendar/shift_input.css" rel="stylesheet">
+    <link href="css/calendar/shift_patterns.css" rel="stylesheet">
+    <link href="css/calendar/shift_patterns_detail.css" rel="stylesheet">
+
+    <!-- General CSS -->
+    <link href="css/groups/groups/detail.css" rel="stylesheet">
+
+    <!-- Third party -->
     <link href="css/third_party/sweetalert.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
