--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
     <link href="css/calendar/shift_patterns_detail.css" rel="stylesheet">
 
     <!-- General CSS -->
-    <link href="css/groups/groups/detail.css" rel="stylesheet">
+    <link href="css/general/groups/detail.css" rel="stylesheet">
 
     <!-- Third party -->
     <link href="css/third_party/sweetalert.css" rel="stylesheet">
@@ -35,13 +35,14 @@
     <!-- your app's js -->
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-
 
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
     <script src="js/controllers/calendar/shifts_controller.js"></script>
     <script src="js/controllers/calendar/shifts_input_controller.js"></script>
+
+    <!-- Swaps Controllers -->
+    <script src="js/controllers/swaps/swaps_controller.js"></script>
 
     <!-- General Controllers -->
     <script src="js/controllers/general/general_controller.js"></script>
@@ -56,9 +57,10 @@
       <!-- General Account -->
       <script src="js/controllers/general/account/sign_up_controller.js"></script>
 
+    <!-- Directives -->
     <script src="js/directives/notification.js"></script>
 
-    <script src="js/services.js"></script>
+    <!-- Services -->
     <script src="js/services/aaa_declare.js"></script>
     <script src="js/services/api.js"></script>
     <script src="js/services/calendar.js"></script>
