--- a/www/index.html
+++ b/www/index.html
@@ -6,8 +6,6 @@
     <title></title>
 
     <!-- App CSS -->
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/directives/notification.css" rel="stylesheet">
 
     <!-- Calendar CSS -->
@@ -22,9 +20,8 @@
     <!-- Third party -->
     <link href="css/third_party/sweetalert.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
