Initial layout for detail own swap page

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
     <!-- Swaps Controllers -->
     <script src="js/controllers/swaps/swaps_controller.js"></script>
+    <script src="js/controllers/swaps/swaps_own_detail_controller.js"></script>
 
     <!-- General Controllers -->
     <script src="js/controllers/general/general_controller.js"></script>
