Able to go to new offer detail page

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
 
     <!-- Swaps Controllers -->
     <script src="js/controllers/swaps/swaps_controller.js"></script>
+    <script src="js/controllers/swaps/swaps_new_offer_controller.js"></script>
     <script src="js/controllers/swaps/swaps_own_controller.js"></script>
     <script src="js/controllers/swaps/swaps_own_detail_controller.js"></script>
     <script src="js/controllers/swaps/swaps_pending_controller.js"></script>
