Initial setup of comments page

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <script src="js/controllers/calendar/shifts_input_controller.js"></script>
 
     <!-- Swaps Controllers -->
+    <script src="js/controllers/swaps/comments/comments_controller.js"></script>
     <script src="js/controllers/swaps/swaps_controller.js"></script>
     <script src="js/controllers/swaps/swaps_edit_offer_controller.js"></script>
     <script src="js/controllers/swaps/swaps_new_offer_controller.js"></script>
