Initial CSS setup for comments page

--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,9 @@
     <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
 
+    <!-- Third Party -->
     <script src="js/third_party/sweetalert.min.js"></script>
+    <script src="js/third_party/autogrow.min.js"></script>
   </head>
   <body ng-app="starter">
     <!--
