Add moment.js and angular-moment.js

--- a/www/index.html
+++ b/www/index.html
@@ -61,8 +61,10 @@
     <script src="js/services/shifts_popover.js"></script>
 
     <!-- Third Party -->
-    <script src="js/third_party/sweetalert.min.js"></script>
+    <script src="js/third_party/moment.min.js"></script>
+    <script src="js/third_party/angular_moment.min.js"></script>
     <script src="js/third_party/autogrow.min.js"></script>
+    <script src="js/third_party/sweetalert.min.js"></script>
   </head>
   <body ng-app="starter">
     <!--
