Initial setup of notifications tab

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,9 @@
     <script src="js/controllers/swaps/swaps_up_for_grabs_controller.js"></script>
     <script src="js/controllers/swaps/swaps_up_for_grabs_list_controller.js"></script>
 
+    <!-- Notification Controllers -->
+    <script src="js/controllers/notifications/notifications_controller.js"></script>
+
     <!-- General Controllers -->
     <script src="js/controllers/general/general_controller.js"></script>
       <!-- General Groups -->
