--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,9 @@
     <script src="js/jquery-1.11.3.min.js"></script>
     <script src="js/app.js"></script>
 
+    <!-- Main Controllers -->
+    <script src="js/controllers/tabs_controller.js"></script>
+
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
     <script src="js/controllers/calendar/shifts_controller.js"></script>
