Fix ios install issues with patch et al

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
 
     <!-- Main Controllers -->
     <script src="js/controllers/tabs_controller.js"></script>
+    <script src="js/controllers/ios9_patch.js"></script>
 
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
@@ -68,7 +69,7 @@
 
     <!-- Third Party -->
     <script src="js/third_party/moment.min.js"></script>
-    <script src="js/third_party/angular_moment.min.js"></script>
+    <script src="js/third_party/angular-moment.min.js"></script>
     <script src="js/third_party/autogrow.min.js"></script>
     <script src="js/third_party/sweetalert.min.js"></script>
   </head>
