Can select country during group creation

--- a/www/index.html
+++ b/www/index.html
@@ -48,6 +48,7 @@
       <script src="js/controllers/general/groups/group_detail_controller.js"></script>
       <script src="js/controllers/general/groups/groups_controller.js"></script>
       <script src="js/controllers/general/groups/group_create_controller.js"></script>
+      <script src="js/controllers/general/groups/group_create_countries_controller.js"></script>
       <!-- General Shift Patterns -->
       <script src="js/controllers/general/shift_patterns/shifts_patterns_controller.js"></script>
       <script src="js/controllers/general/shift_patterns/shifts_patterns_detail_controller.js"></script>
@@ -63,6 +64,8 @@
     <script src="js/services/api.js"></script>
     <script src="js/services/calendar.js"></script>
     <script src="js/services/general.js"></script>
+    <script src="js/services/group.js"></script>
+    <script src="js/services/locations.js"></script>
     <script src="js/services/notification.js"></script>
     <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
