Added provinces and states selection

--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,8 @@
       <script src="js/controllers/general/groups/groups_controller.js"></script>
       <script src="js/controllers/general/groups/group_create_controller.js"></script>
       <script src="js/controllers/general/groups/group_create_countries_controller.js"></script>
+      <script src="js/controllers/general/groups/group_create_provinces_controller.js"></script>
+      <script src="js/controllers/general/groups/group_create_states_controller.js"></script>
       <!-- General Shift Patterns -->
       <script src="js/controllers/general/shift_patterns/shifts_patterns_controller.js"></script>
       <script src="js/controllers/general/shift_patterns/shifts_patterns_detail_controller.js"></script>
