Refactor parts of legend into directive

--- a/www/index.html
+++ b/www/index.html
@@ -59,6 +59,7 @@
       <script src="js/controllers/general/account/sign_up_controller.js"></script>
 
     <!-- Directives -->
+    <script src="js/directives/legend.js"></script>
     <script src="js/directives/notification.js"></script>
 
     <!-- Services -->
