--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
     <script src="js/controllers/tabs_controller.js"></script>
     <script src="js/controllers/ios9_patch.js"></script>
 
+    <!-- Initial Controllers -->
+    <script src="js/controllers/initial/initial_welcome_controller.js"></script>
+
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
     <script src="js/controllers/calendar/shifts_controller.js"></script>
