Landing page plus link to sign up page

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
 
     <!-- Initial Controllers -->
     <script src="js/controllers/initial/initial_welcome_controller.js"></script>
+    <script src="js/controllers/initial/initial_sign_up_controller.js"></script>
 
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
