--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="js/controllers/initial/initial_welcome_controller.js"></script>
     <script src="js/controllers/initial/initial_sign_up_controller.js"></script>
     <script src="js/controllers/initial/initial_groups_controller.js"></script>
+    <script src="js/controllers/initial/initial_groups_detail_controller.js"></script>
 
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
