Can go to custom new group page

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
     <script src="js/controllers/initial/initial_sign_up_controller.js"></script>
     <script src="js/controllers/initial/initial_groups_controller.js"></script>
     <script src="js/controllers/initial/initial_groups_detail_controller.js"></script>
+    <script src="js/controllers/initial/initial_groups_new_controller.js"></script>
 
     <!-- Calendar Controllers -->
     <script src="js/controllers/calendar/calendar_controller.js"></script>
