Refactor group views to directives

--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,7 @@
       <script src="js/controllers/general/account/sign_up_controller.js"></script>
 
     <!-- Directives -->
+    <script src="js/directives/groups.js"></script>
     <script src="js/directives/legend.js"></script>
     <script src="js/directives/notification.js"></script>
 
