Ionic radio button fix with iOS 9

--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,7 @@
 
     <!-- Directives -->
     <script src="js/directives/groups.js"></script>
+    <script src="js/directives/ionRadio.js"></script>
     <script src="js/directives/legend.js"></script>
     <script src="js/directives/notification.js"></script>
 
