Setup view for notification settings

--- a/www/index.html
+++ b/www/index.html
@@ -53,6 +53,7 @@
 
     <!-- Notification Controllers -->
     <script src="js/controllers/notifications/notifications_controller.js"></script>
+    <script src="js/controllers/notifications/notification_settings_controller.js"></script>
 
     <!-- General Controllers -->
     <script src="js/controllers/general/general_controller.js"></script>
