Ability to login with email and password

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
 
     <!-- Initial Controllers -->
     <script src="js/controllers/initial/initial_welcome_controller.js"></script>
+    <script src="js/controllers/initial/initial_login_controller.js"></script>
     <script src="js/controllers/initial/initial_sign_up_controller.js"></script>
     <script src="js/controllers/initial/initial_groups_controller.js"></script>
     <script src="js/controllers/initial/initial_groups_detail_controller.js"></script>
