Go to swap page if detailed page has a shift from the past

--- a/www/index.html
+++ b/www/index.html
@@ -86,6 +86,7 @@
     <script src="js/services/group.js"></script>
     <script src="js/services/locations.js"></script>
     <script src="js/services/notification.js"></script>
+    <script src="js/services/shift.js"></script>
     <script src="js/services/shift_type.js"></script>
     <script src="js/services/shifts_popover.js"></script>
 
